# grep-haskell

./: CHANGELOG.md  README.md  my-grep.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: my-grep-0.1.0.0-inplace.conf  package.cache
src/MyGrep/: Core.hs  Search.hs
src/MyGrep/Common/: Types.hs  Utils.hs
