cabal-version:      3.4
name:               my-grep
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             tusharad
maintainer:         tusharadhatrao@gmail.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall -threaded -rtsopts

library
    import:           warnings
    exposed-modules:  MyLib
                    , MyGrep.Common.Types
                    , MyGrep.Common.Utils
                    , MyGrep.Core
                    , MyGrep.Search

    build-depends:    base ^>=4.17.2.1
                    , text
                    , directory
                    , filepath
                    , safe-coloured-text

    hs-source-dirs:   src

    default-language: GHC2021

executable my-grep
    import:           warnings

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        my-grep
    hs-source-dirs:   app
    default-language: GHC2021

test-suite my-grep-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test

    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        my-grep
